# moss-ttsd

./: .dockerignore  README.md  pyproject.toml
docker/: cu128.dockerfile  sglang-0-5-7-cu128.dockerfile
src/moss_ttsd/audio/: __init__.py  wav.py
src/moss_ttsd/commands/: app.py
src/moss_ttsd/inferencers/: __init__.py  inferencer.py  utils.py
src/moss_ttsd/models/: configuration_moss_ttsd.py  modeling_moss_ttsd.py  processing_moss_ttsd.py
src/moss_ttsd/servicer/: __init__.py  depends.py  servicer.py
src/moss_ttsd/voices/: __init__.py  registry.py
tests/: demo_tts.py  demo_tts_stream.py  test01.py
tests/test_httpx/: demo_tts_stream_httpx.py  test_segment.py
tests/test_inferencer/: benchmark_pretrained.py  demo_pretrained.py  get_pretrained_voice.py
tests/test_sglang/: test_raw_speed.py
tests/test_voice/: test_man01_client.py  test_paimon.py  test_paimon_client.py  test_rita.py  test_voice.py
