[project]
name = "moss-ttsd"
version = "0.1.0"
description = ""
authors = [
    {name = "MigoXV",email = "1695587905@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "openai (>=2.8.0,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "transformers (==4.56.0)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn (>=0.30.0,<1.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "numpy (==1.26.4)",
    "scipy (==1.14.1)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "librosa (>=0.11.0,<0.12.0)"
]

[tool.poetry]
packages = [{include = "moss_ttsd", from = "src"}]

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
